@@ -17,7 +17,6 @@
 package org.gradle.plugin.devel.plugins;
 
 import org.gradle.api.Action;
-import org.gradle.api.JavaVersion;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
@@ -42,6 +41,7 @@ import org.gradle.api.plugins.internal.JavaPluginHelper;
 import org.gradle.api.provider.Provider;
 import org.gradle.api.tasks.ClasspathNormalizer;
 import org.gradle.api.tasks.Copy;
+import org.gradle.api.tasks.PathSensitivity;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.TaskProvider;
 import org.gradle.api.tasks.bundling.Jar;
@@ -52,6 +52,9 @@ import org.gradle.internal.DisplayName;
 import org.gradle.internal.buildoption.InternalFlag;
 import org.gradle.internal.buildoption.InternalOptions;
 import org.gradle.internal.component.local.model.OpaqueComponentIdentifier;
+import org.gradle.internal.jvm.JpmsConfiguration;
+import org.gradle.internal.installation.CurrentGradleInstallation;
+import org.gradle.internal.installation.GradleInstallation;
 import org.gradle.plugin.devel.GradlePluginDevelopmentExtension;
 import org.gradle.plugin.devel.PluginDeclaration;
 import org.gradle.plugin.devel.tasks.GeneratePluginDescriptors;
@@ -69,7 +72,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -449,13 +451,20 @@ public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
             Set<SourceSet> testSourceSets = extension.getTestSourceSets();
             project.getNormalization().getRuntimeClasspath().ignore(PluginUnderTestMetadata.METADATA_FILE_NAME);
 
+            GradleInstallation gradleInstallation = ((ProjectInternal) project).getServices().get(CurrentGradleInstallation.class).getInstallation();
             project.getTasks().withType(Test.class).configureEach(test -> {
                 test.getInputs()
-                    .files(pluginClasspathTask.get().getPluginClasspath())
+                    .files(pluginClasspathTask.map(PluginUnderTestMetadata::getPluginClasspath))
                     .withPropertyName("pluginClasspath")
                     .withNormalizer(ClasspathNormalizer.class);
 
-                test.getJvmArgumentProviders().add(new AddOpensCommandLineArgumentProvider(test));
+                test.getJvmArgumentProviders().add(new GradleJvmCommandLineArgumentProvider(test));
+                if (gradleInstallation != null) {
+                    test.getInputs()
+                        .dir(gradleInstallation.getGradleHome())
+                        .withPathSensitivity(PathSensitivity.RELATIVE)
+                        .withPropertyName("gradleHome");
+                }
             });
 
             for (SourceSet testSourceSet : testSourceSets) {
@@ -469,22 +478,20 @@ public abstract class JavaGradlePluginPlugin implements Plugin<Project> {
     }
 
     /**
-     * Provides an {@code --add-opens} flag for {@code java.base/java.lang} if the JVM version
-     * a given test task is running does not allow reflection of JDK internals by default.
+     * Provides JVM argumensts necessary to to run a Gradle daemon depending on the Gradle version used.
      * Needed when using ProjectBuilder in tests.
      */
-    private static class AddOpensCommandLineArgumentProvider implements CommandLineArgumentProvider {
+    private static class GradleJvmCommandLineArgumentProvider implements CommandLineArgumentProvider {
         private final Test test;
 
-        private AddOpensCommandLineArgumentProvider(Test test) {
+        private GradleJvmCommandLineArgumentProvider(Test test) {
             this.test = test;
         }
 
         @Override
         public Iterable<String> asArguments() {
-            return test.getJavaVersion().isCompatibleWith(JavaVersion.VERSION_1_9)
-                ? Collections.singletonList("--add-opens=java.base/java.lang=ALL-UNNAMED")
-                : Collections.emptyList();
+            int majorVersion = Integer.parseInt(test.getJavaVersion().getMajorVersion());
+            return JpmsConfiguration.forDaemonProcesses(majorVersion, true);
         }
     }
 
